Bug 231154 - [kgpg] incorrect codepage in error
Summary: [kgpg] incorrect codepage in error
Status: RESOLVED FIXED
Alias: None
Product: kgpg
Classification: Applications
Component: general (other bugs)
Version First Reported In: unspecified
Platform: unspecified Unspecified
: NOR normal
Target Milestone: ---
Assignee: Rolf Eike Beer
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2010-03-17 21:51 UTC by Eckhart Wörner
Modified: 2010-03-24 07:24 UTC (History)
0 users

See Also:
Latest Commit:
Version Fixed/Implemented In:
Sentry Crash Report:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description Eckhart Wörner 2010-03-17 21:51:51 UTC
Version:            (using KDE 4.2.4)

This bug has been copied over from http://bugs.debian.org/cgi-bin/bugreport.cgi?bug=538510

----

On error message "Ошибка расшифровки." when see "Подробности>>"

error show in wrong codepage

"gpg: заÑиÑÑовано 4096-биÑнÑм клÑÑом ELG-E, Ñ ID 
1D869471, ÑозданнÑм 2009-07-25
      "TeXHaPb <staryx@inbox.ru>"
gpg: Ñбой ÑаÑÑиÑÑованиÑ: ÑекÑеÑнÑй клÑÑ Ð½Ðµ 
найден"

-----------

on console codepage is normal:

ivan@ivan1986:~% gpg --decrypt 1.txt
gpg: зашифровано 4096-битным ключом ELG-E, с ID 1D869471, созданным 2009-07-25
      "TeXHaPb <staryx@inbox.ru>"
gpg: сбой расшифрования: секретный ключ не найден

ivan@ivan1986:~%locale
LANG=ru_RU.UTF-8
LANGUAGE=
LC_CTYPE="ru_RU.UTF-8"
LC_NUMERIC="ru_RU.UTF-8"
LC_TIME="ru_RU.UTF-8"
LC_COLLATE="ru_RU.UTF-8"
LC_MONETARY="ru_RU.UTF-8"
LC_MESSAGES="ru_RU.UTF-8"
LC_PAPER="ru_RU.UTF-8"
LC_NAME="ru_RU.UTF-8"
LC_ADDRESS="ru_RU.UTF-8"
LC_TELEPHONE="ru_RU.UTF-8"
LC_MEASUREMENT="ru_RU.UTF-8"
LC_IDENTIFICATION="ru_RU.UTF-8"
LC_ALL=
Comment 1 Rolf Eike Beer 2010-03-24 07:19:14 UTC
SVN commit 1106906 by dakon:

properly handle 8bit messages from "gpg --decrypt"

BUG:231154

 M  +54 -12    kgpgtextinterface.cpp  


WebSVN link: http://websvn.kde.org/?view=rev&revision=1106906
Comment 2 Rolf Eike Beer 2010-03-24 07:24:34 UTC
SVN commit 1106908 by dakon:

properly handle 8bit messages from "gpg --decrypt"

Backport of r1106906

CCBUG:231154


 M  +56 -13    kgpgtextinterface.cpp  


WebSVN link: http://websvn.kde.org/?view=rev&revision=1106908