properly handle 8bit messages from "gpg --decrypt"

BUG:231154

svn path=/trunk/KDE/kdeutils/kgpg/; revision=1106906